assets/css/style.css
@import url('./reset.css');

@font-face {
    font-family: 'lato';
    src: url('../font/Lato-Regular.ttf');
}

* {
    font-family: 'lato';
}

.container,
.innermenucontainer,
.aboutcontainer,
.mynamecontainer,
.goodatcontainer,
.innerstatscontainer,
.portfoliocontainer,
.contactcontainer {
    width: 90vw;
    max-width: 1280px;
    margin: 0 auto;
}

.menucontainer,
.herocontainer,
.portfolioimgcontainer,
.statscontainer,
.contactimgcontainer {
    width: 100vw;
}

/*
 * Menu CSS
 */

header {
    position: fixed;
    z-index: 1;
    top: 0;
    left: 50%;
    transform: translateX(-50%);
}

.innermenucontainer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 0;
    font-size: 1.2rem;

    .menu {
        display: flex;
        align-items: center;
        gap: 2rem;

        svg {
            width: 1rem;
            display: inline-block;
        }

        .menufull {
            display: none;
            align-items: center;
            gap: 2rem;
        }

        .menufullshown {
            position: absolute;
            top: 100%;
            right: 2rem;
            display: block;
            align-items: center;
            gap: 2rem;
            background-color: white;
            padding: 1rem;
            border: 1px solid lightgray;
            box-shadow: 0 0.3rem 0.3rem rgba(65, 65, 65, .3);
        }

        li:hover {
            cursor: pointer;
        }
    }

    .menusearch {
        display: none;
    }
}

.opaquemenu {
    background-color: white;
    border-bottom: 1px solid lightgray;
    box-shadow: 0 0.3rem 0.3rem rgba(65, 65, 65, .3);
    transition: all 0.3s;
}

#boiteMiniatures {
    display: none;
    position: absolute;
    background-color: white;
    box-shadow: 0.3rem 0.3rem 0.3rem rgba(65, 65, 65, .3);
    top: 100%;

    >div {
        display: flex;
        flex-wrap: wrap;
        gap: 0.5rem;
        padding: 0.5rem;
        width: 27rem;

        img {
            width: 6rem;
            height: 4rem;
            object-fit: cover;
            cursor: pointer;
        }

        img:hover {
            filter: brightness(70%);
        }
    }
}

@media screen and (min-width: 576px) {
    .innermenucontainer {
        .menuhamburger {
            display: none;
        }

        .menu {
            .menufull {
                position: unset;
                border: unset;
                box-shadow: unset;
                padding: unset;
                background-color: unset;
                display: flex;
            }
        }

        .menusearch {
            display: block;
        }
    }
}

/*
 * Hero CSS
 */

.herocontainer {
    background-image: url('../img/parallax1.jpg');
    background-repeat: no-repeat;
    background-size: cover;

    /* Set Parallax effect */
    background-attachment: fixed;
    background-position: center;

    min-height: 600px;
    position: relative;

    .herologo {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        padding: 1rem 2rem;
        background-color: black;
        color: white;
        font-size: 1.8rem;
        letter-spacing: 1rem;
        text-wrap: nowrap;

        span {
            display: none;
        }
    }
}

@media screen and (min-width:576px) {
    .herocontainer {
        .herologo {
            span {
                display: inline-block;
            }
        }
    }
}

@media screen and (min-width:1080px) {
    .herocontainer {
        .herologo {
            font-size: 2.6rem;
        }
    }
}

/*
 * Define global styles
 */

h2,
.title {
    font-size: 2.2rem;
    margin-top: 7rem;
    margin-bottom: 2.5rem;
    text-align: center;
}

.subtitle {
    font-size: 1.5rem;
    font-style: italic;
    text-align: center;
    margin-bottom: 2rem;
}

.content {
    font-size: 1.5rem;
    margin-bottom: 4rem;
}

/*
 *  About Me CSS section
 */

.aboutcontainer {
    width: 95%;
}

/*
 * My name CSS section
 */

.mynamecontainer {
    display: flex;
    flex-direction: column;
    width: 100%;

    .leftside {
        width: 100%;

        h3 {
            margin-bottom: 5rem;
            font-size: 1.5rem;
            text-align: center;
        }

        .leftsideimage {
            width: 90%;
            margin: 0 auto;

            img {
                width: 100%;
            }
        }
    }

    .rightside {
        display: none;
        width: 50%;
    }
}

@media screen and (min-width: 576px) {
    .mynamecontainer {
        flex-direction: row;
        justify-content: space-between;

        .leftside,
        .rightside {
            width: 49%;
        }

        .rightside {
            display: block;
        }
    }
}

/*
  * Good at section
  */

progress::-webkit-progress-bar {
    background: #EEE;
}

progress::-webkit-progress-value {
    background: #666;
}

progress {
    appearance: none;
    margin-bottom: 0.4rem;
    margin-top: 0.8rem;
    width: 100%;
    height: 3.5rem;
    border-radius: 0;
    overflow: hidden;
    color: white;
    text-align: center;
    position: relative;
}

progress::after {
    position: absolute;
    top: 50%;
    left: 50%;
    content: attr(value)'%';
    transform: translate(-50%, -50%);
}

.goodatcontainer {
    h3 {
        margin-top: 5rem;
        margin-bottom: 3rem;

        font-size: 1.5rem;
        text-align: center;
    }

    .skillsbar {
        display: flex;
        flex-direction: column;
        margin-bottom: 5rem;

        label {
            font-size: 1.1rem;
            letter-spacing: 1rem;

            i {
                margin-right: 0.6rem;
            }
        }
    }
}

@media screen and (min-width:576px) {
    .goodatcontainer {
        .skillsbar {
            label {
                font-size: 1.5rem;
            }
        }
    }
}


/*
 * Statistics CSS section
 */

.statscontainer {
    background-color: #666;
    color: white;

}
/* ... */

